<?xml version="1.0"?>
<package format="2">
  <name>profi2021_master_solution</name>
  <version>1.4.0</version>
  <description>This package simple example for PD Controller with gravity compensation on Kuka iiwa 7</description>
  <maintainer email="some@some.com">Some Some</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>


  <depend>iiwa_description</depend>
  <depend>gazebo_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>orocos-kdl</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
  <depend>brics_actuator</depend>


</package>
